# snot

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
docs/: README.md  query-syntax.md
nvim/: lazy-spec-example.lua
nvim/lua/snot/: backend.lua  commands.lua  completion.lua  init.lua  picker.lua  ui.lua
nvim/plugin/: snot.lua
src/: error.rs  lib.rs  main.rs  note.rs  vault.rs
src/commands/: backlinks.rs  create.rs  graph.rs  index.rs  init.rs  list.rs  mod.rs  query.rs  tags.rs  update.rs  watch.rs
src/db/: graph.rs  index.rs  mod.rs  query.rs  schema.rs  storage.rs
src/parser/: frontmatter.rs  links.rs  markdown.rs  mod.rs
src/picker/: fzf.rs  mod.rs
src/query/: ast.rs  executor.rs  fuzzy.rs  mod.rs  parser.rs
src/watcher/: checksum.rs  handler.rs  mod.rs  scanner.rs
tests/: graph.rs  vault_ops.rs
