[package]
name = "snot"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "7.0"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.10"
pulldown-cmark = "0.12"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
bincode = "1.3"
regex = "1.11"
walkdir = "2.5"
