[package]
name = "snot"
version = "0.2.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
notify = "7.0"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.10"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
bincode = "1.3"
regex = "1.11"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.14"
